fixed styling issue for safari on iPhone

--- a/app/assets/stylesheets/playlist.scss
+++ b/app/assets/stylesheets/playlist.scss
@@ -7,7 +7,7 @@ img {
   width: 76px;
   max-width: 76px;
   height: auto;
-}
+}ut
 
 .center {
   margin: auto;
@@ -50,6 +50,7 @@ td#details {
   border-radius: 4px;
   border-color: #00AEEF;
   padding: 10px;
+  -webkit-appearance: none;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
 }
